tests/NormalTests/paczka1/small_fuzzy/54327795.err
Error in line 5: S985 S870 77,0
Error in line 2: xGyy9JKtNk S323 55,3
Error in line 6: S985 S323 73,3
